--- a/mtntours.com/package.json
+++ b/mtntours.com/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "natours",
+  "name": "mtntours.com",
   "version": "1.0.0",
-  "description": "Landing page for natours",
+  "description": "landing page for mtntours",
   "main": "index.js",
-  "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+  "dependencies": {
+    "live-server": "^1.2.0"
   },
-  "author": "Jaime Rosales",
+  "scripts": {
+    "compile:sass": "node:sass sass/main.scss css/style.css -w"
+  },
+  "author": "jaime R",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^4.9.2"
-  },
-  "dependencies": {
-    "live-server": "^1.2.0"
   }
 }
