--- a/jaimewebdev.com/package.json
+++ b/jaimewebdev.com/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "watch:sass": "node-sass sass/main.scss css/style.css -w",
     "devServer": "live-server",
-    "start": "npm-run-all --parallel devServer watch:sass" 
+    "start": "npm-run-all --parallel devServer watch:sass"
   },
   "author": "Jaime Rosales",
   "license": "MIT",
   "devDependencies": {
     "node-sass": "^4.11.0",
     "npm-run-all": "^4.1.5"
-  }
+  },
+  "dependencies": {}
 }
-
